Now when timer on, user see stats and progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="home_sets">Sets:</string>
     <string name="home_work">Seconds:</string>
     <string name="home_rest">Rest:</string>
+    <string name="timer_state_work">WORK</string>
+    <string name="timer_state_rest">REST</string>
 </resources>
