--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="home_rest">Rest:</string>
     <string name="timer_state_work">WORK</string>
     <string name="timer_state_rest">REST</string>
+    <string name="back_pressed">Press twice for exit</string>
+    <string name="timer_stop">STOP</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_about">About</string>
+    <string name="menu_exit">Exit</string>
 </resources>
