--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,14 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
     <string name="menu_exit">Exit</string>
+    <string name="settings_timer">Timer</string>
+    <string name="settings_timer_of_preparing">Time of preparing</string>
+    <string name="settings_save_data">Save (Sets, Secs, Rest) </string>
+    <string name="settings_save">Save</string>
+
+    <string-array name="prepare_list">
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+    </string-array>
 </resources>
