--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="settings_timer_of_preparing">Time of preparing</string>
     <string name="settings_save_data">Save (Sets, Secs, Rest) </string>
     <string name="settings_save">Save</string>
+    <string name="timer_state_prepare">Get ready</string>
 
     <string-array name="prepare_list">
         <item>5</item>
