--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="settings_save">Save</string>
     <string name="timer_state_prepare">Get ready</string>
     <string name="settings_changes_saved">Changes saved</string>
+    <string name="about_creator">Trackspart \n Created by Ninise @ 2016</string>
+    <string name="about_ok">OK</string>
 
     <string-array name="prepare_list">
         <item>5</item>
