--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="settings_changes_saved">Changes saved</string>
     <string name="about_creator">Trackspart \n Created by Ninise @ 2016</string>
     <string name="about_ok">OK</string>
+    <string name="menu_volume">Volume</string>
 
     <string-array name="prepare_list">
         <item>5</item>
